[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/DialogueBox.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/Cloude_Regular_1.02.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Resources/Images/dialogue_box.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[node name="Dialogue Box" type="TextureRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -147.0
margin_top = -149.0
margin_right = 147.0
margin_bottom = -12.0
rect_min_size = Vector2( 294, 137 )
texture = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Button" type="Label" parent="."]
margin_left = 1306.0
margin_top = 682.0
margin_right = 1350.0
margin_bottom = 714.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeakerLabel" type="RichTextLabel" parent="."]
modulate = Color( 0.894118, 0.894118, 0.894118, 1 )
margin_left = 16.0
margin_top = 6.0
margin_right = 277.0
margin_bottom = 32.0
size_flags_vertical = 3
custom_constants/line_separation = -14
custom_fonts/normal_font = SubResource( 3 )
text = "???:"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BodyLabel" type="RichTextLabel" parent="."]
modulate = Color( 0.894118, 0.894118, 0.894118, 1 )
margin_left = 22.0
margin_top = 22.0
margin_right = 273.0
margin_bottom = 104.0
size_flags_vertical = 3
custom_constants/line_separation = -14
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[fill]The quick brown fox jumps over the lazy dog. Lorem ipsum dolor sit amet consecutor dolisciping atem howdy do buckaroo?![/fill]"
text = "The quick brown fox jumps over the lazy dog. Lorem ipsum dolor sit amet consecutor dolisciping atem howdy do buckaroo?!"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Responses" type="VBoxContainer" parent="."]
anchor_right = 0.765
anchor_bottom = 1.0
margin_left = 23.0
margin_top = 57.0
margin_right = 44.09
margin_bottom = -23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlHint" type="RichTextLabel" parent="."]
modulate = Color( 0.894118, 0.894118, 0.894118, 1 )
margin_left = 197.0
margin_top = 97.0
margin_right = 276.0
margin_bottom = 123.0
size_flags_vertical = 3
custom_constants/line_separation = -14
custom_fonts/normal_font = SubResource( 3 )
text = "(Press Space)"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="Button" to="." method="_button_gui_input" binds= [ "next_line_id" ]]
